--- a/package.json
+++ b/package.json
@@ -9,13 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^2.1.2",
     "@next/bundle-analyzer": "^14.2.5",
+    "@tailwindcss/typography": "^0.5.13",
+    "clsx": "^2.1.1",
     "contentlayer": "^0.3.4",
-    "date-fns": "^3.6.0",
+    "lucide-react": "^0.424.0",
     "next": "14.2.5",
     "next-contentlayer": "^0.3.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "reading-time": "^1.5.0",
+    "rehype-autolink-headings": "^7.1.0",
+    "rehype-katex": "^7.0.0",
+    "rehype-pretty-code": "^0.13.2",
+    "rehype-slug": "^6.0.0",
+    "remark-math": "^6.0.0",
+    "shiki": "^1.12.1"
   },
   "devDependencies": {
     "@types/node": "^20",
