--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "rehype-pretty-code": "^0.13.2",
     "rehype-slug": "^6.0.0",
     "remark-math": "^6.0.0",
-    "shiki": "^1.12.1"
+    "shiki": "^1.12.1",
+    "typed.js": "^2.1.0"
   },
   "devDependencies": {
     "@types/node": "^20",
