--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "rehype-slug": "^6.0.0",
     "remark-math": "^6.0.0",
     "shiki": "^1.12.1",
+    "smoothscroll-polyfill": "^0.4.4",
     "typed.js": "^2.1.0"
   },
   "devDependencies": {
