--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@next/bundle-analyzer": "^14.2.5",
     "@tailwindcss/typography": "^0.5.13",
     "@types/smoothscroll-polyfill": "^0.3.4",
+    "@vercel/analytics": "^1.3.1",
     "clsx": "^2.1.1",
     "contentlayer": "^0.3.4",
     "lucide-react": "^0.424.0",
