--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@giscus/react": "^3.0.0",
     "@headlessui/react": "^2.1.2",
     "@next/bundle-analyzer": "^14.2.5",
     "@tailwindcss/typography": "^0.5.13",
